--- a/.github/workflows/4-copilot-comment.yml
+++ b/.github/workflows/4-copilot-comment.yml
@@ -27,6 +27,9 @@ jobs:
   get_current_step:
     name: Check current step number
     runs-on: ubuntu-latest
+    env:
+      FILE: comments.js
+      SEARCH: "Create web server"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
