--- a/.github/workflows/4-copilot-comment.yml
+++ b/.github/workflows/4-copilot-comment.yml
@@ -39,6 +39,9 @@ jobs:
         with:
           file: "comments.js"
           search: "Create web server"
+        env:
+          FILE: "comments.js"
+          SEARCH: "Create web server"
 
       - name: Update to step X
         uses: skills/action-update-step@v2
